--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.28.10",
+    "file-loader": "^1.1.10",
+    "image-webpack-loader": "^4.1.0",
+    "style-loader": "^0.20.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.9"
   },
