--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^0.28.10",
+    "csv-loader": "^2.1.1",
     "file-loader": "^1.1.10",
     "image-webpack-loader": "^4.1.0",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.9"
+    "webpack-cli": "^2.0.9",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.5"
