--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.10",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
     "image-webpack-loader": "^4.1.0",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
