--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
   "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.18",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.10",
+    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "image-webpack-loader": "^4.1.0",
     "style-loader": "^0.20.2",
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0",
+    "webpack-merge": "^4.1.2",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
