--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack --config webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -18,10 +18,10 @@
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.10",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "github:webpack-contrib/html-webpack-plugin",
     "image-webpack-loader": "^4.1.0",
     "style-loader": "^0.20.2",
-    "webpack": "^4.0.1",
+    "webpack": "^3.11.0",
     "webpack-cli": "^2.0.9",
     "webpack-dev-server": "^3.0.0",
     "webpack-merge": "^4.1.2",
